--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section id="#donate" >
     <div class="donate">
       <h1 class="centered">Support Us</h1>
-      <div class="centered" style="margin-top: 100px;">  <button type="button" class="btn btn-primary btn-lg btn-block">Donate</button></div>
+      <div class="centered" style="margin-top: 100px;">  <button type="button"  class="btn btn-primary btn-lg btn-block"><a href="https://pages.razorpay.com/rkarantask2" style="color: white;">Donate</a></button></div>
     </div>
 </section>
 <hr/>
